# ags-old

./: .cirrus.yml  .gitignore  CMakeLists.txt  CMakeLists.txt.orig  README.md
AgsTools/RoomTool/: CMakeLists.txt  cstrech.h  roomlib.cpp  roomlib.h  roomtool.cpp
Android/agslauncher/: local.properties
Android/agslauncher/app/: build.gradle  proguard-rules.pro
Android/agslauncher/gradle/wrapper/: gradle-wrapper.properties
CMake/: FetchCairo.cmake  FetchExpat.cmake  FetchFontconfig.cmake  FetchFreetype.cmake  FetchHarfbuzz.cmake  FetchHarfbuzzFreetype.cmake  FetchLibpng.cmake  FetchPixman.cmake  FetchSDL2.cmake  FetchSDL_ttf.cmake  FetchZlib.cmake  FindLocalBzip2.cmake  FindLocalSDL2.cmake  FindLocalSdlSound.cmake  FindPixman.cmake  PrepareFreetype.cmake
CMake/Extra/Cairo/: CMakeLists.txt
CMake/Extra/Fontconfig/src/: CMakeLists.txt
CMake/SDL_Sound/: CMakeLists.txt
Common/: CMakeLists.txt
Common/ac/: gamesetupstruct.cpp  gamesetupstructbase.cpp  gamestructdefines.h
Common/core/: assetmanager.cpp  platform.h
Common/font/: fonts.cpp  ttffontrenderer.cpp  ttffontrenderer.h
Common/gfx/: allegrobitmap.cpp  blender.h
Common/gui/: guitextbox.cpp
Common/libsrc/freetype-2.1.3/: CMakeLists.txt
Common/script/: cc_script.cpp
Common/test/: stream_test.cpp  string_test.cpp
Common/util/: directory.cpp  matrix.h  misc.cpp  string.cpp  string.h
Compiler/: CMakeLists.txt  agscc.cpp  fmem.cpp
Compiler/preproc/: preprocessor.cpp  preprocessor.h
Compiler/script/: cc_macrotable.cpp  cc_macrotable.h  cs_parser.cpp
Compiler/test/: cs_parser_test.cpp  preprocessor_test.cpp
Editor/AGS.Editor/: AGSEditor.csproj
Editor/AGS.Editor.Types/: AGS.Editor.Types.csproj
Editor/AGS.Editor.Types/EditorFeatures/: BaseTemplate.cs  BeforeShowContextMenuEventArgs.cs  ContentDocument.cs  DockData.cs  EditorContentPanel.cs  GameTemplate.cs  GetAboutDialogTextEventArgs.cs  GetScriptHeaderListEventArgs.cs  GetScriptModuleListEventArgs.cs  MenuCommand.cs  MenuCommands.cs  MessageBoxIconType.cs  RoomTemplate.cs  SourceControlProject.cs
Editor/AGS.Editor.Types/Interfaces/: IGUIController.cs
Editor/AGS.Editor.Types/Properties/: AssemblyInfo.cs
Editor/AGS.Editor/Panes/: ScriptEditor.cs
Editor/AGS.Editor/Resources/: agsdefns.sh
Editor/AGS.Editor/Utils/: BitmapExtensions.cs
Editor/AGS.Native/: NativeDLL.vcxproj  agsnative.cpp
Editor/AGS.Types/: AGS.Types.csproj
Editor/AGS.Types/Enums/: ScriptAPIVersion.cs
Engine/: CMakeLists.txt  Makefile  Makefile-defs.freetype  Makefile-defs.linux  Makefile-defs.osx  Makefile-objs
Engine/ac/: button.cpp  character.cpp  character.h  dialog.cpp  display.cpp  draw.cpp  drawingsurface.cpp  dynamicsprite.cpp  event.cpp  file.cpp  game.cpp  gamesetup.h  gamestate.cpp  gamestate.h  global_api.cpp  global_audio.cpp  global_character.cpp  global_debug.cpp  global_dialog.cpp  global_display.cpp  global_drawingsurface.cpp  global_game.cpp  global_inventoryitem.cpp  global_invwindow.cpp  global_palette.cpp  global_parser.cpp  global_room.cpp  global_screen.cpp  global_translation.cpp  gui.cpp  guicontrol.cpp  guiinv.cpp  hotspot.cpp  invwindow.cpp  keycode.cpp  keycode.h  label.cpp  listbox.cpp  mouse.cpp  mouse.h  (+20 more)
Engine/ac/dynobj/: cc_character.cpp  cc_dynamicarray.cpp  cc_dynamicobject.cpp  cc_dynamicobject.h  managedobjectpool.cpp  managedobjectpool.h  scriptdict.cpp  scriptdrawingsurface.cpp  scriptoverlay.cpp  scriptset.cpp
Engine/debug/: debug.cpp
Engine/device/: mousew32.cpp
Engine/font/: fonts_engine.cpp
Engine/game/: game_init.cpp  savegame.cpp  savegame_components.cpp
Engine/gfx/: ali3d_sdl_renderer.cpp  ali3dogl.cpp  ali3dogl.h  gfxdriverfactory.cpp  ogl_headers.h  ogl_support.h
Engine/gui/: cscidialog.cpp  mylistbox.cpp  mypushbutton.cpp
Engine/libsrc/apeg-1.2.1/: CMakeLists.txt  mpeg1dec.c
Engine/libsrc/glm/: CMakeLists.txt
Engine/libsrc/hq2x/: hq2x3x.h
Engine/main/: config.cpp  engine.cpp  engine_setup.cpp  game_run.cpp  game_run.h  game_start.cpp  graphics_mode.cpp  graphics_mode.h  main.cpp  main_sdl2.cpp  update.cpp
Engine/media/audio/: audio.cpp  audio_core.cpp  audio_core.h
Engine/media/video/: video.cpp
Engine/platform/android/: acpland.cpp
Engine/platform/base/: agsplatformdriver.cpp  agsplatformdriver.h
Engine/platform/emscripten/: acpemscripten.cpp
Engine/platform/generic_unix/: acplgunix.cpp
Engine/platform/linux/: acpllnx.cpp
Engine/platform/windows/: acplwin.cpp  win_ex_handling.cpp
Engine/plugin/: agsplugin.cpp  agsplugin.h  global_plugin.cpp
Engine/script/: cc_instance.cpp  cc_instance.h  cc_instance2.cpp  runtimescriptvalue.h  script.cpp  script.h  script_api.h
Engine/test/: test_file.cpp  test_gfx.cpp  test_inifile.cpp  test_math.cpp  test_memory.cpp  test_sprintf.cpp  test_string.cpp  test_version.cpp
Engine/util/: library.h  library_posix.h  library_windows.h
OSX/buildlibs/: Makefile  checkenv.sh
OSX/patches/: libogg-1.3.4.patch
Solutions/: AGS.Editor.Full.sln  Engine.sln
Solutions/Common.Lib/: Common.Lib.Test.vcxproj  Common.Lib.Test.vcxproj.filters  Common.Lib.vcxproj  Common.Lib.vcxproj.filters
Solutions/Compiler.App/: Compiler.App.vcxproj  Compiler.App.vcxproj.filters
Solutions/Compiler.Lib/: Compiler.Lib.Test.vcxproj  Compiler.Lib.Test.vcxproj.filters  Compiler.Lib.vcxproj  Compiler.Lib.vcxproj.filters
Solutions/Compiler2.Lib/: Compiler2.Lib.Test.vcxproj  Compiler2.Lib.Test.vcxproj.filters
Solutions/Engine.App/: Engine.App.vcxproj  Engine.App.vcxproj.filters
Solutions/Engine.Lib/: Engine.Lib.Test.vcxproj  Engine.Lib.Test.vcxproj.filters  Engine.Lib.vcxproj  Engine.Lib.vcxproj.filters
Solutions/Tests.App/: Common.Lib.Test.vcxproj  Common.Lib.Test.vcxproj.filters  Engine.App.Test.vcxproj  Engine.App.Test.vcxproj.filters
ci/linux/: Dockerfile
ci/windows/: Dockerfile
libsrc/: download.sh  sha1sums
libsrc/SDL2-2.0.12/: CMakeLists.txt
libsrc/SDL_sound/: CMakeLists.txt
libsrc/allegro/: CMakeLists.txt
libsrc/allegro/include/: sdl2alleg.h
libsrc/allegro/src/: file.c  graphics.c
libsrc/bzip2/: CMakeLists.txt
libsrc/mojoAL/: CMakeLists.txt
(+29 files in other folders)
